@@ -26,6 +26,8 @@ Version 1.0.10 (March xxth 2013)
 - Fixed: Baro meter did not show on the dashboard under weather
 - Fixed: Only TFA UV sensor will now report a temperature
 - Fixed: Light/Switch notification could not be unset
+- Implemented: Adjustment value for temperature sensors
+- Implemented: multiply value for rain sensors
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
